feat: Get user profile (#169)
* feat(accounts): Add endpoint to get the profile of the user from their session

* docs(openapi): Update spec

* docs(http): Update bruno collection

* test(accounts): Add tests to ensure users can get and update their profile
